# reverse-api-engineer

./: .gitignore  CHANGELOG.md  CLAUDE.md  INTERVIEW.md  README.md  RELEASE.md  prompts.md  pyproject.toml
.claude-plugin/: marketplace.json
examples/apple/: INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  api_client.py  extract_job_fields.py  main.py  quick_example.py
examples/ashby/: API_SUMMARY.txt  QUICKSTART.md  README.md  api_client.py  example_usage.py  requirements.txt
examples/autoscout24/: README.md  SUMMARY.md  api_client.py
examples/ikea/: README.md  api_client.py
examples/uber/: API_ANALYSIS_SUMMARY.md  README.md  api_client.py  example_fetch_all_jobs.py  quick_start.py
llm-docs/: OPENCODE_API_SUMMARY.md  opencode-api.json
llm-docs/claude-agent-sdk/: QUICKSTART.md
plugins/reverse-api-engineer/: CHANGELOG.md  LICENSE  README.md
plugins/reverse-api-engineer/.claude-plugin/: plugin.json
plugins/reverse-api-engineer/agents/: api-reverse-engineer.md
plugins/reverse-api-engineer/commands/: agent.md  capture.md  engineer.md  manual.md
plugins/reverse-api-engineer/skills/reverse-engineering-api/: SKILL.md
plugins/reverse-api-engineer/skills/reverse-engineering-api/scripts/: har_filter.py  har_utils.py
src/reverse_api/: __init__.py  auto_engineer.py  base_engineer.py  browser.py  cli.py  config.py  engineer.py  messages.py  opencode_engineer.py  opencode_ui.py  pricing.py  session.py  sync.py  tui.py  utils.py
