[project]
name = "reverse-api-engineer"
version = "0.2.0"
description = "A tool to capture browser traffic for API reverse engineering"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kalil", email = "kalil0321@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["api", "reverse-engineering", "browser", "har", "playwright", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "click>=8.1.0",
    "claude-agent-sdk>=0.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "requests>=2.32.5",
    "anthropic>=0.40.0",
    "brotli>=1.2.0",
    "aiohttp>=3.12.15",
]

[project.optional-dependencies]
agent = [
    "browser-use",
]

[project.urls]
Homepage = "https://github.com/kalil0321/reverse-api-engineer"
Repository = "https://github.com/kalil0321/reverse-api-engineer"
Issues = "https://github.com/kalil0321/reverse-api-engineer/issues"

[project.scripts]
reverse-api-engineer = "reverse_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reverse_api"]

[dependency-groups]
dev = []
